<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainActivity"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/contactos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/font_main"
        android:orientation="horizontal"
        android:text="@string/contactos"
        android:textColor="@color/secondary_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/contacto_detalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="25dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingBottom="50dp"
        app:cardCornerRadius="9dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactos">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:id="@+id/img_container"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_contacto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/secondary_dark"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/img_container"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_main"
                    android:text="@string/nombre"
                    android:textColor="@color/secondary"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_main"
                    android:text="Dann Avila"
                    android:textColor="@color/text_color"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_main"
                    android:text="@string/telefono"
                    android:textColor="@color/secondary"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_main"
                    android:text="56 1957 2122"
                    android:textColor="@color/text_color"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_main"
                    android:text="@string/empresa"
                    android:textColor="@color/secondary"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/empresa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_main"
                    android:text="SmartScale"
                    android:textColor="@color/text_color"
                    android:textSize="17sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/borrarContacto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/secondary_light"
                tools:ignore="ContentDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvcontactos"
        android:layout_width="match_parent"
        android:layout_height="770dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacto_detalle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addcontactos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/secondary_light"
        android:clickable="true"
        android:src="@drawable/ic_mas"
        android:tint="@color/secondary"
        app:backgroundTint="@color/secondary_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="30dp"
        app:rippleColor="@color/secondary_dark"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>